--- a/templates/main.html
+++ b/templates/main.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AsCatering</title>
+    <title>Ac-catering</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <div class="container">
+                <a href="#" class="logo">
+                    <img src="logo.png" alt="Logo"> Ac-catering
+                </a>
+                <ul class="menu">
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">Меню</a></li>
+                    <li><a href="#">Услуги</a></li>
+                    <li><a href="#">О_нас</a></li>
+                    <li><a href="#">Контакты</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!-- Content goes here -->
+
 </body>
+
+
 </html>
